# VLS

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
CMake/: add-vls-library-examples.cmake  add-vls-library-mock.cmake  add-vls-library-test.cmake  add-vls-library.cmake
Concurrent/: CMakeLists.txt
Concurrent/include/VLS/Concurrent/: AsyncQueue.h  IAsyncQueue.h  SafeQueue.h
Concurrent/src/: AsyncQueue.cpp
Concurrent/test/: UnitTestAsyncQueue.cpp
Converter/: CMakeLists.txt  CONVERTER.md
Converter/include/VLS/Converter/: Converter.h  ConverterFactory.h  ConverterItem.h  IConverterItem.h  ValueConverter.h
Converter/src/: Converter.cpp  ConverterFactory.cpp  ValueConverter.cpp
Converter/test/: CMakeLists.txt
Converter/test/src/: UnitTestConverter.cpp  UnitTestValueConverter.cpp
Core/: CMakeLists.txt
Core/include/VLS/: DateTime.h
Core/include/VLS/Convert/: Functions.h  Settings.h
Core/include/VLS/Utilities/: Assert.h  Trace.h
Core/src/: DateTime.cpp
Core/src/Convert/: Functions.cpp  Settings.cpp
Core/test/src/: UnitTestConversion.cpp
Documentation/: GenerateDoxygen.bat
Documentation/DoxygenConfiguration/: Doxygen Guide.txt  doxygen_configfile  doxygen_footer.html  doxygen_header.html
Element/: CMakeLists.txt  VLSConan.cmake  conanfileExternal.txt
Element/include/VLS/Element/: Abstract.h  Union.h  Xml.h
Element/src/: Abstract.cpp  Union.cpp  Xml.cpp
Element/test/src/: UnitTestElement.cpp
Event/: CMakeLists.txt  EVENT.md
Event/examples/: CMakeLists.txt
Event/examples/src/: BookPublisher.h  BookSubscriber.h  EventHandlerExample.h  ExampleEventHandlerAdvanced.h  ExampleEventHandlerArguments.h  ExampleEventHandlerCallbackFunctions.h  ExampleEventHandlerUnsubscribe.h  IBookPublisher.h  main.cpp
Event/include/VLS/Event/: ApplyTuple.h  Bind.h  EventData.h  EventHandler.h  EventLoop.h  IEventHandler.h  IEventLoop.h  Publisher.h  SafeQueue.h  Subscriber.h
Event/src/: EventLoop.cpp  Publisher.cpp  Subscriber.cpp
Event/test/: CMakeLists.txt  IntegrationTest_Event.cpp  UnitTestEvent_EventHandler.cpp  UnitTestEvent_EventLoop.cpp  UnitTestEvent_PubSub.cpp  VLSConan.cmake
Event/test/src/: IntegrationTest_Event.cpp  UnitTestEvent_EventHandler.cpp  UnitTestEvent_EventLoop.cpp  UnitTestEvent_PubSub.cpp
Log/: CMakeLists.txt
Log/include/VLS/Log/: AbstractLogSink.h  ConsoleLogSink.h  Log.h  LogHandler.h  LogSink.h
Log/mock/: CMakeLists.txt  LogSinkMock.h
Log/src/: ConsoleLogSink.cpp  Log.cpp  LogHandler.cpp  LogSink.cpp
Log/test/: CMakeLists.txt  UnitTestConsoleLogSink.cpp
Log/test/src/: UnitTestLog_Log.cpp
Properties/: CMakeLists.txt  PROPERTIES.md
Properties/include/VLS/Properties/: IProperty.h  Property.h  Temp.h
Properties/src/: Property.cpp  Temp.cpp
Properties/test/: CMakeLists.txt  UnitTestProperties_Test.cpp
Properties/test/src/: UnitTestProperties_Test.cpp
Variant/: CMakeLists.txt  Varaint.pro
Variant/include/VLS/Variant/: Base.h  CRef.h  Ref.h  Reference.h  TestRef.h  Type.h  Val.h  Value.h
Variant/src/: Base.cpp  CRef.cpp  Ref.cpp  Reference.cpp  Val.cpp  Value.cpp
Variant/test/src/: UnitTestCRef.cpp  UnitTestReference.cpp  UnitTestTestRef.cpp  UnitTestValue.cpp
